# enterprise-engineering-copilot

./: .dockerignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
knowledge/: databricks.md
src/copilot/: main.py
src/copilot/chunking/: base.py  simple_chunker.py
src/copilot/document/: models.py  prompts.py  service.py
src/copilot/embeddings/: base.py  mock_embedding.py
src/copilot/explain/: models.py  prompts.py  service.py
src/copilot/generator/: project_generator.py  zip_generator.py
src/copilot/indexing/: base.py  builder.py
src/copilot/knowledge/: loader.py
src/copilot/llm/: base.py  config.py  factory.py  ollama_client.py  openai_client.py
src/copilot/memory/: base.py  in_memory.py
src/copilot/models/: bronze.py  chat.py  generate.py  rag.py
src/copilot/parsers/: bronze_parser.py
src/copilot/prompts/: prompt_builder.py  test_prompt_builder.py
src/copilot/refactor/: models.py  prompts.py  service.py
src/copilot/retrieval/: base.py  in_memory.py
src/copilot/review/: models.py  prompts.py  service.py
src/copilot/services/: assistant_service.py  bronze_service.py  test_generation_service.py
src/copilot/ui/: app.py  client.py
src/copilot/vectorstore/: base.py  in_memory.py
tests/unit/: test_assistant_service_chat.py  test_bronze_parser.py  test_bronze_service.py  test_project_generator.py  test_prompt_builder.py  test_test_generation_service.py  test_zip_generator.py
tests/unit/api/: test_chat_api.py  test_generate_api.py  test_rag_api.py
tests/unit/chunking/: __init__.py
tests/unit/document/: test_prompts.py  test_service.py
tests/unit/embeddings/: test_mock_embedding.py
tests/unit/explain/: test_prompts.py  test_service.py
tests/unit/indexing/: test_builder.py
tests/unit/knowledge/: test_loader.py
tests/unit/llm/: test_factory.py  test_ollama_client.py  test_openai_client.py
tests/unit/memory/: test_in_memory.py
tests/unit/refactor/: test_prompts.py  test_service.py
tests/unit/retrieval/: test_in_memory.py  (+1 more)
(+13 files in other folders)
