[project]
name = "enterprise-engineering-copilot"
version = "0.1.0"
description = "AI-powered engineering assistant for enterprise data platforms."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "uvicorn>=0.51.0",
]

[project.urls]
Repository = "https://github.com/Suchitech02/enterprise-engineering-copilot"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]